--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,22 @@
-body{
-    color: deeppink;
+body
+{
+    color: #333;
     text-align: center;
     font-family: "Arial";
+    font-size: 16px;
+}
+
+#container
+{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    margin: 0 auto;
+    background-color: beige;
+    border: 1px solid blue;
+}
+
+#container h1
+{
+    font-size: 20 px;
 }
