--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,6 +4,25 @@ body
     text-align: center;
     font-family: "Arial";
     font-size: 16px;
+    margin: 0;
+    padding: 0;
+}
+
+#cabecera
+{
+    background: #33A;
+    box-shadow: 0px 2px 50px 0px rgba(0,0,0,0.5);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+}
+
+#cabecera #tagline
+{
+    padding: 1em 0 0 0;
+    font-weight: normal;
+    font-size: 0.8em;
 }
 
 #container
@@ -11,12 +30,17 @@ body
     width: 70%;
     padding: 1em;
     text-align: left;
+    border: 1px solid #ddd;
     margin: 0 auto;
-    background-color: beige;
-    border: 1px solid blue;
 }
 
 #container h1
 {
     font-size: 20 px;
+}
+
+#post
+{
+    background: white;
+    padding: 1em;
 }
