--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,6 +4,7 @@ body
     text-align: center;
     font-family: "Arial";
     font-size: 16px;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 #container
